--- a/src/main/webapp/css/driverMain.css
+++ b/src/main/webapp/css/driverMain.css
@@ -106,6 +106,15 @@ hr {
   display: none;
 }
 
+#order-status {
+  font-weight: bold;
+  color: #40ff70;
+}
+
+.warning-text {
+  color: red;
+}
+
 .cancel-button,
 .done-button,
 .accept-button {
