--- a/src/main/webapp/css/deliveryStatus.css
+++ b/src/main/webapp/css/deliveryStatus.css
@@ -70,6 +70,10 @@ hr {
   color: #40ff70;
 }
 
+.warning-text {
+  color: red;
+}
+
 .update-button {
   position: relative;
   background-color: #505050;
